* Read `vault.cryptomator` instead of `masterkey.cryptomator` * Remove methods from CryptoFileSystemProvider that deal with password handling or key derivation (will be added to CryptoLib) * Added generic `KeyLoader` interface to allow usage of keys from other sources than just password-based * Added `VaultConfiguration` to deal with `vault.cryptomator` files
Related to #7, #95 and #94